@@ -22,7 +22,7 @@ if (my $err = t::helper::default_unavailable) {
     plan skip_all => "Couldn't connect to MozRepl: $@";
     exit
 } else {
-    plan tests => 12*@files*@instances;
+    plan tests => 12*@files*@instances + 4*@instances;
 };
 
 sub new_mech {
@@ -46,11 +46,24 @@ t::helper::run_across_instances(\@instances, $instance_port, \&new_mech, sub {
     };
     if (! $triggered) {
         SKIP: {
-            skip(12, "Couldn't get at 'timer'. Do you have a Javascript blocker?");
+            skip(12 +4, "Couldn't get at 'timer'. Do you have a Javascript blocker?");
         };
         return
     };
-
+    # Check that we can trigger the timeout
+    for my $file ($files[0]) {
+        $mech->get_local($file);
+        is $mech->title, $file, "We loaded the right file ($file)";
+        $mech->allow('javascript' => 1);
+        ok $mech->is_visible(selector => '#before'), "The element is visible";
+        my $finished = eval {
+            $mech->wait_until_invisible(selector => '#before', timeout => 1);
+            1;
+        };
+        is $finished, undef, "We got an exception";
+        like $@, qr/Timeout/, "We got a timeout error message";
+    };
+    
     for my $file (@files) {
         $mech->get_local($file);
         is $mech->title, $file, "We loaded the right file ($file)";
@@ -61,8 +74,8 @@ t::helper::run_across_instances(\@instances, $instance_port, \&new_mech, sub {
 
         ok $mech->is_visible(selector => 'body'), "We can see the body";
         
-        my $standby = $mech->by_id('standby', single=>1);
         if(! ok !$mech->is_visible(selector => '#standby'), "We can't see #standby") {
+            my $standby = $mech->by_id('standby', single=>1);
             my $style = $standby->{style};
             diag "style.visibility          <" . $style->{visibility} . ">";
             diag "style.display             <" . $style->{display} . ">";
@@ -81,6 +94,7 @@ t::helper::run_across_instances(\@instances, $instance_port, \&new_mech, sub {
         };
         is $ok, 1, "No timeout" or diag $@;
         if(! ok( !$mech->is_visible(selector => '#standby'), "The #standby is invisible")) {
+            my $standby = $mech->by_id('standby', single=>1);
             my $style = $standby->{style};
             diag "style.visibility          <" . $style->{visibility} . ">";
             diag "style.display             <" . $style->{display} . ">";
@@ -88,7 +102,6 @@ t::helper::run_across_instances(\@instances, $instance_port, \&new_mech, sub {
             diag "computed-style.visibility <" . $style->{visibility} . ">";
             diag "computed-style.display    <" . $style->{display} . ">";
         };
-        
 
         # Now test with plain text
         $mech->get_local($file);
@@ -97,6 +110,7 @@ t::helper::run_across_instances(\@instances, $instance_port, \&new_mech, sub {
         ($timer,$type) = $mech->eval_in_page('timer');
 
         if(! ok( !$mech->is_visible(xpath => '//*[contains(text(),"stand by")]'), "We can't see the standby message (via its text)")) {
+            my $standby = $mech->by_id('standby', single=>1);
             my $style = $standby->{style};
             diag "style.visibility          <" . $style->{visibility} . ">";
             diag "style.display             <" . $style->{display} . ">";
@@ -104,19 +118,37 @@ t::helper::run_across_instances(\@instances, $instance_port, \&new_mech, sub {
             diag "computed-style.visibility <" . $style->{visibility} . ">";
             diag "computed-style.display    <" . $style->{display} . ">";
         };
-        
+
         $mech->click({ selector => '#start', synchronize => 0 });
         sleep 1;
        
         if(! ok $mech->is_visible(xpath => '//*[contains(text(),"stand by")]'), "We can see the standby message (via its text)") {
-            diag "style.visibility " . $standby->{style}->{visibility};
-            diag "style.display    " . $standby->{style}->{display};
+            my $standby = $mech->by_id('standby', single=>1);
+            my $style = $standby->{style};
+            diag "style.visibility          <" . $style->{visibility} . ">";
+            diag "style.display             <" . $style->{display} . ">";
+            $style = $window->getComputedStyle($standby, undef);
+            diag "computed-style.visibility <" . $style->{visibility} . ">";
+            diag "computed-style.display    <" . $style->{display} . ">";
         };
         $ok = eval {
+            # This needs to re-query every time as the text changes!!
             $mech->wait_until_invisible(xpath => '//*[contains(text(),"stand by")]', timeout => $timer+2);
             1;
         };
-        is $ok, 1, "No timeout" or diag $@;
+        if(! is $ok, 1, "No timeout") {
+            diag $@;
+            for ($mech->xpath('//*[contains(text(),"stand by")]')) {
+                diag $_->{tagName}, $_->{innerHTML};
+            };
+            my $standby = $mech->xpath('//*[contains(text(),"stand by")]', single=>1);
+            my $style = $standby->{style};
+            diag "style.visibility          <" . $style->{visibility} . ">";
+            diag "style.display             <" . $style->{display} . ">";
+            $style = $window->getComputedStyle($standby, undef);
+            diag "computed-style.visibility <" . $style->{visibility} . ">";
+            diag "computed-style.display    <" . $style->{display} . ">";
+        };
         ok !$mech->is_visible(selector => '#standby'), "The #standby is invisible";
     };
 });
